--- a/css/creative.css
+++ b/css/creative.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 hr {
